--- a/readme
+++ b/readme
@@ -1,1 +1,43 @@
+# Servers-and-APIs 09
 
+![License](https://img.shields.io/badge/License-MIT-blue.svg)
+
+## Description
+
+Challenge code for the 9th challenge of this course
+The purpose of this tool display information pulled from an api and display it to the user.
+
+## Installation
+N/A
+
+## Table of Contents
+
+* [Installation](#installation)
+* [Usage](#usage)
+* [Contributing](#contributing)
+* [Tests](#tests)
+
+* [License](#license)
+
+* [Questions](#questions)
+
+
+## Usage
+
+Weather Application used for viewing the weather
+
+## Contributing
+
+Bradley Santiago
+
+## Tests
+
+n/a
+
+## License
+
+This project is licensed under the MIT license.
+
+## Questions
+
+If you have any questions, please feel free to contact me at [janedoe@mail.com](mailto:janedoe@mail.com). You can also find more of my work at [https://github.com/revengelmfao](https://github.com/revengelmfao).
